--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
-    "exclude": ["node_modules", "dist"],
-    "include": ["src"],
+    "exclude": ["node_modules", "/dist"],
+    "include": ["src/**/*"],
     "compileOnSave": false,
     "buildOnSave": false,
     "compilerOptions": {
@@ -14,7 +14,7 @@
         "listFiles": true,
         "composite": false,
         "removeComments": true,
-        "noImplicitAny": true,
+        "noImplicitAny": false,
         "strictNullChecks": false,
         "strictFunctionTypes": true,
         "noImplicitThis": true,
