--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,6 @@
         "allowSyntheticDefaultImports": false,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "skipLibCheck": true,
-        "rootDir": ".",
-        "baseUrl": "."
+        "skipLibCheck": true
     }
 }
