--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "main": "index.ts",
     "scripts": {
         "start:dev": "tsc && nodemon index.ts",
-        "start": "ts-node index.ts"
+        "start": "ts-node-dev --respawn --transpileOnly index.ts"
     },
     "author": "",
     "license": "MIT",
@@ -49,6 +49,7 @@
         "prettier-eslint": "^9.0.0",
         "prettier-eslint-cli": "^5.0.0",
         "ts-jest": "^24.3.0",
+        "ts-node-dev": "^1.0.0-pre.44",
         "ts-node": "^8.5.4",
         "typescript": "^3.7.4"
     },
