--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "author": "",
     "license": "MIT",
     "dependencies": {
-        "@types/mongoose": "^5.5.32",
+        "@types/mongoose": "^5.5.32", 
         "@types/stripe": "^7.13.19",
         "apollo-server-express": "^2.3.1",
-        "artillery": "^1.6.0-29",
         "aws-sdk": "^2.600.0",
         "class-validator": "^0.11.0",
         "dotenv": "^8.2.0",
@@ -22,9 +21,11 @@
         "mongodb": "^3.3.3",
         "mongoose": "^5.7.13",
         "nodemon": "^2.0.2",
-        "reflect-metadata": "^0.1.13",
+        "ts-node-dev": "^1.0.0-pre.44",
+        "reflect-metadata": "^0.1.12",
         "stripe": "^7.15.0",
-        "type-graphql": "^0.17.6"
+        "type-graphql": "^0.17.5",
+        "typescript": "^3.7.4"
     },
     "devDependencies": {
         "@types/express": "^4.16.0",
@@ -34,7 +35,6 @@
         "@typescript-eslint/eslint-plugin": "^2.15.0",
         "@typescript-eslint/parser": "^2.15.0",
         "babel-eslint": "^10.0.3",
-        "easygraphql-load-tester": "^2.0.0",
         "eslint": "^6.8.0",
         "eslint-config-airbnb": "^18.0.1",
         "eslint-config-google": "^0.14.0",
@@ -49,8 +49,9 @@
         "prettier-eslint": "^9.0.0",
         "prettier-eslint-cli": "^5.0.0",
         "ts-jest": "^24.3.0",
-        "ts-node-dev": "^1.0.0-pre.44",
         "ts-node": "^8.5.4",
+        "ts-node-dev": "^1.0.0-pre.44",
+        "tsc-watch": "^4.0.0",
         "typescript": "^3.7.4"
     },
     "repository": {
