--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
     "version": "1.0.0",
     "main": "index.ts",
     "scripts": {
-        "start:dev": "tsc && nodemon index.ts",
         "start": "ts-node-dev --respawn --transpileOnly index.ts"
     },
     "author": "",
     "license": "MIT",
     "dependencies": {
-        "@types/mongoose": "^5.5.32", 
+        "@types/mongoose": "^5.5.32",
         "@types/stripe": "^7.13.19",
         "apollo-server-express": "^2.3.1",
         "aws-sdk": "^2.600.0",
@@ -18,12 +17,13 @@
         "expo-server-sdk": "^3.4.0",
         "express": "^4.16.4",
         "graphql": "^14.0.2",
+        "helmet": "^3.21.3",
         "mongodb": "^3.3.3",
         "mongoose": "^5.7.13",
         "nodemon": "^2.0.2",
-        "ts-node-dev": "^1.0.0-pre.44",
         "reflect-metadata": "^0.1.12",
         "stripe": "^7.15.0",
+        "ts-node-dev": "^1.0.0-pre.44",
         "type-graphql": "^0.17.5",
         "typescript": "^3.7.4"
     },
