--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@types/stripe": "^7.13.19",
         "apollo-server-express": "^2.3.1",
         "aws-sdk": "^2.600.0",
+        "bcrypt": "^4.0.1",
         "class-validator": "^0.11.0",
         "dotenv": "^8.2.0",
         "expo-server-sdk": "^3.4.0",
