--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
     "version": "1.0.0",
     "main": "index.ts",
     "scripts": {
-        "start": "ts-node-dev --respawn --transpileOnly index.ts"
+        "start": "ts-node-dev --respawn --transpileOnly index.ts",
+        "db:setup": "ts-node ./src/test-utils/setup.ts",
+        "test": "npm run db:setup && jest"
     },
     "author": "",
     "license": "MIT",
     "dependencies": {
-        "@types/mongoose": "^5.5.32",
+        "@types/mongoose": "^5.7.15",
         "@types/stripe": "^7.13.19",
         "apollo-server-express": "^2.3.1",
         "aws-sdk": "^2.600.0",
@@ -25,13 +27,13 @@
         "reflect-metadata": "^0.1.12",
         "stripe": "^7.15.0",
         "ts-node-dev": "^1.0.0-pre.44",
-        "type-graphql": "^0.17.5",
-        "typescript": "^3.7.4"
+        "type-graphql": "^0.17.5"
     },
     "devDependencies": {
         "@types/express": "^4.16.0",
+        "@types/faker": "^4.1.11",
         "@types/graphql": "^14.0.4",
-        "@types/jest": "^24.0.25",
+        "@types/jest": "^24.9.1",
         "@types/node": "^10.17.9",
         "@typescript-eslint/eslint-plugin": "^2.15.0",
         "@typescript-eslint/parser": "^2.15.0",
@@ -45,6 +47,7 @@
         "eslint-plugin-prettier": "^3.1.2",
         "eslint-plugin-react": "^7.14.3",
         "eslint-plugin-react-hooks": "^1.7.0",
+        "faker": "^4.1.0",
         "jest": "^24.9.0",
         "prettier": "^1.19.1",
         "prettier-eslint": "^9.0.0",
@@ -53,7 +56,7 @@
         "ts-node": "^8.5.4",
         "ts-node-dev": "^1.0.0-pre.44",
         "tsc-watch": "^4.0.0",
-        "typescript": "^3.7.4"
+        "typescript": "^3.8.3"
     },
     "repository": {
         "type": "git",
