--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
         "apollo-server-express": "^2.3.1",
         "aws-sdk": "^2.600.0",
         "bcrypt": "^4.0.1",
+        "body-parser": "^1.19.0",
         "class-validator": "^0.11.0",
         "dotenv": "^8.2.0",
         "expo-server-sdk": "^3.4.0",
         "express": "^4.16.4",
         "graphql": "^14.0.2",
         "helmet": "^3.21.3",
+        "ip": "^1.1.5",
         "mongodb": "^3.3.3",
         "mongoose": "^5.7.13",
         "nodemon": "^2.0.2",
