--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "dotenv": "^8.2.0",
         "expo-server-sdk": "^3.4.0",
         "express": "^4.16.4",
+        "firebase-admin": "^8.12.1",
         "graphql": "^14.0.2",
         "helmet": "^3.21.3",
         "ip": "^1.1.5",
